webkit backface visibility for image opacity bug

--- a/conf_site/static/conf_site/less/custom.less
+++ b/conf_site/static/conf_site/less/custom.less
@@ -49,6 +49,7 @@ img {
 a {
   > img {
     transition: opacity .25s;
+    -webkit-backface-visibility: hidden;
   }
   &:hover, &:focus {
     > img {
